asset/scss/_omeka.scss
/* ... */
.resource-title {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    word-break: break-word;
    h2 {
        margin-right: $global-margin;
    }
}

.resource.show .grid-x {
    padding: (2 * $global-padding) 0;
}

.resource.show #resource-values {
    order: 1;
    @include xy-cell(8);
    margin-left: 0;
    @include breakpoint(medium down) {
        width: 100%;
        margin-right: 0;
    }
}

.resource.show .media-embeds,
.resource.show .media-list {
    order: 2;
    @include xy-cell(4);
    margin-right: 0;
    @include breakpoint(medium down) {
        width: 100%;
        margin-left: 0;
    }
}

.resource.show .media-render>a:only-child {
    @include thumbnail;
    margin-bottom: $global-margin;
}

.resource.show .media-render>* {
    max-width: 100%;
}

.resource.show .values .resource-link img,
#linked-resources img {
    @include thumbnail;
    height: ($paragraph-lineheight * 2rem);
    width: auto;
    min-width: 1px;
    margin: 0 (.5 * $global-margin) 0 0;
}

.resource.show .resource-link {
    display: flex;
    align-items: center;
}

.resource.show #linked-resources .resource-link {
    margin-bottom: 0;
}

.linked-header .omeka-pagination,
.linked-footer .omeka-pagination {
    margin: (.5 * $global-margin) 0;
}

@include breakpoint(medium up) {
    .linked-header {
        display: flex;
        align-items: flex-end;
        justify-content: space-between;
    }
    .linked-header .omeka-pagination {
        width: 50%;
        justify-content: flex-end;
        margin: 0;
    }
    .linked-footer {
        display: flex;
        align-items: flex-start;
        justify-content: space-between;
    }
    .linked-footer .omeka-pagination {
        width: 100%;
        justify-content: flex-start;
        margin: 0;
    }
}

.media-list img {
    @extend .thumbnail;
}

.media-list img {
    margin: 0 $global-margin 0 0;
    height: 5 * $global-padding;
    width: auto;
}

.inline .property {
    display: flex;
    dt {
        @include xy-cell(4);
        text-align: right;
    }
    .values {
        @include xy-cell(8);
    }
}

.value .language {
    @include label;
    background-color: $light-gray;
    margin-right: .5 * $global-margin;
}

.value {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    &:not(:last-child) {
        margin-bottom: .5 * $global-margin;
    }
}

.value.resource {
    margin-bottom: $global-margin;
}

.value-content:not(:only-child) {
    margin-right: .25 * $global-margin;
}

#itemfiles.leftgallery {
    height: 60vh;
    width: 100%;
    margin-bottom: $global-margin;
}

#itemfiles.topgallery {
    width: 100%;
    margin-bottom: $global-margin;
}

#itemfiles.topgallery .media.resource,
#itemfiles.leftgallery .media.resource {
    height: 0;
    overflow: hidden;
}

#itemfiles .img-responsive {
    opacity: 0;
}

#itemfiles .lg-img-wrap,
#itemfiles .lg-video-object,
#itemfiles .lg-video-poster {
    padding-bottom: 3 * $global-padding;
}

#itemfiles .lg-outer .lg-video-cont .lg-object {
    width: auto !important;
}

.lg-outer[data-lg-slide-type="video"] .lg-download {
    opacity: 1 !important;
    pointer-events: all !important;
}

#itemfiles.leftgallery {
    width: 100%;
    align-self: flex-start;
    @include breakpoint(medium up) {
        width: 70%;
    }
}

#itemfiles.leftgallery~#resource-values {
    width: 100%;
    margin: 0;
    @include breakpoint(medium up) {
        padding-left: $global-padding;
        width: 30%;
    }
}

// #. Advanced search
// ------------------
#advanced-search .input-group {
    @include breakpoint(small down) {
        flex-wrap: wrap;
    }
}

#advanced-search select {
    @include breakpoint(small down) {
        width: 100%;
        margin-bottom: 0;
    }
}

#advanced-search .input-group.value {
    margin-bottom: $global-margin !important;
}

#advanced-search .multi-value .value:only-child .remove-value {
    display: none;
}

#advanced-search .value {
    margin-bottom: $global-margin !important;
}

#advanced-search .query-text {
    margin-right: .25 * $global-margin;
}

#advanced-search [class="field"] {
    @extend .fieldset;
}

#advanced-search .help-text {
    margin-bottom: $global-margin;
}

#advanced-search .remove-value {
    padding-top: 0;
    padding-bottom: 0;
    @include breakpoint(small down) {
        margin-bottom: 0;
    }
}

#advanced-search .value>* {
    margin-bottom: 0;
}

#advanced-search .value>*:not(:last-child) {
    margin-right: 5px;
    margin-left: 0;
}

.field-meta {
    @extend legend;
}

#property-queries select {
    @include breakpoint(small down) {
        margin-bottom: (.5 * $global-margin);
    }
}

// #. Page
// ------------------
.breadcrumbs {
    width: 100%;
}

.page #content {
    @include xy-grid;
}

.blocks {
    @include xy-cell(12);
}

.blocks>h2:first-child {
    margin-bottom: (2 * $global-margin);
}

.wide.sub-menu {
    @include xy-cell(3);
    @include breakpoint(small down) {
        @include xy-cell(12);
        margin-bottom: $global-margin;
    }
}

.wide.sub-menu a {
    @include breakpoint(small down) {
        padding-left: 0;
        padding-right: 0;
    }
}

.wide.sub-menu+.blocks {
    @include xy-cell(9);
    @include breakpoint(small down) {
        @include xy-cell(12);
    }
}

.left {
    float: left;
    margin: 0 $global-margin $global-margin 0;
    max-width: 40%;
    @include breakpoint(small down) {
        max-width: 25%;
    }
}

.right {
    float: right;
    margin: 0 0 $global-margin $global-margin;
    max-width: 40%;
    @include breakpoint(small down) {
        max-width: 25%;
    }
}

.file img {
    max-width: 100%;
    height: auto;
}

.attachments .media-render>h3,
.file h3,
.item-showcase h3 {
    font-size: rem-calc(map-deep-get($header-styles, small, h4, font-size));
    margin: $global-margin 0;
}

.item-showcase {
    text-align: center;
}

.site-page-pagination {
    @include xy-cell;
}

.site-page-pagination>a {
    @extend .button;
}
/* ... */

